crates/test-files/fixtures/compile_errors/struct_recursive_cycles.fe
// structs `Foo` and `Bar` contains indirect recursion
// struct Foo depends on `Bar`
struct Foo {
    x: Bar
}

// struct Bar depends on `Foo`
struct Bar {
    x: Foo
}

// struct `Foo2` depends on itself - contains direct recursion
struct Foo2 {
    x: Foo2
}

// struct `Bar2` has no recursion
struct Bar2 {
    x: Foo
    y: Bar
}

contract MyContract {
    pub fn func(foo: Foo, foo2: Foo2, bar2: Bar2) {}
}
